--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -33,7 +33,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Readable</a>
+            <a class="navbar-brand" href="/">Readable</a>
         </div>
 
     </div>
